--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 asgiref==3.8.1
+diff-match-patch==20230430
+dj-database-url==2.2.0
 Django==5.1.1
+django-admin-extra-buttons==1.5.8
+django-import-export==4.1.1
+gunicorn==23.0.0
+packaging==24.1
+psycopg2-binary==2.9.9
 sqlparse==0.5.1
+tablib==3.5.0
+typing_extensions==4.12.2
+whitenoise==6.7.0
