--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
 asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.3.2
 diff-match-patch==20230430
 dj-database-url==2.2.0
 Django==5.1.1
 django-admin-extra-buttons==1.5.8
 django-import-export==4.1.1
 gunicorn==23.0.0
+idna==3.10
 packaging==24.1
 psycopg2-binary==2.9.9
+pyotp==2.9.0
+python-dateutil==2.9.0.post0
+requests==2.32.3
+six==1.16.0
+smartapi-python==1.5.1
 sqlparse==0.5.1
 tablib==3.5.0
 typing_extensions==4.12.2
+urllib3==2.2.3
 whitenoise==6.7.0
