--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,11 @@ dj-database-url==2.2.0
 Django==5.1.1
 django-admin-extra-buttons==1.5.8
 django-import-export==4.1.1
+gevent==24.2.1
+greenlet==3.1.1
 gunicorn==23.0.0
 idna==3.10
+logzero==1.7.0
 numpy==2.1.1
 packaging==24.1
 pandas==2.2.3
@@ -17,6 +20,7 @@ pyotp==2.9.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 requests==2.32.3
+setuptools==75.1.0
 six==1.16.0
 smartapi-python==1.5.1
 sqlparse==0.5.1
@@ -25,4 +29,7 @@ typing_extensions==4.12.2
 tzdata==2024.2
 tzlocal==5.2
 urllib3==2.2.3
+websocket==0.2.1
 whitenoise==6.7.0
+zope.event==5.0
+zope.interface==7.0.3
