--- a/requirements.txt
+++ b/requirements.txt
@@ -18,12 +18,15 @@ pandas==2.2.3
 psycopg2-binary==2.9.9
 pyotp==2.9.0
 python-dateutil==2.9.0.post0
+python-http-client==3.3.7
 pytz==2024.2
 requests==2.32.3
+sendgrid==6.11.0
 setuptools==75.1.0
 six==1.16.0
 smartapi-python==1.5.1
 sqlparse==0.5.1
+starkbank-ecdsa==2.2.0
 ta==0.11.0
 tablib==3.5.0
 typing_extensions==4.12.2
